AMQ-1685 Made the activemq-admin scripts identical to the activemq ones except the start arg is not passed along.  This should make them behave the same way.
git-svn-id: https://svn.apache.org/repos/asf/activemq/trunk@651288 13f79535-47bb-0310-9956-ffa450edef68